<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/splashScreen">

    <fragment
        android:id="@+id/splashScreen"
        android:name="com.echrisantus.buzz.ui.splash.SplashScreen"
        android:label="@string/splashscreen"
        tools:layout="@layout/fragment_splash_screen">
        <action
            android:id="@+id/splashToHome"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.echrisantus.buzz.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/homeToMovieDetails"
            app:destination="@id/movieDetailFragment"
            app:popUpToInclusive="true"/>
        <action
            android:id="@+id/homeToTvDetails"
            app:destination="@id/tvDetailFragment"
            app:popUpToInclusive="true"/>
        <action
            android:id="@+id/homeToFavourites"
            app:destination="@id/favouriteFragment"
            app:popUpToInclusive="true"/>
        <action
            android:id="@+id/homeToSearch"
            app:destination="@id/searchFragment"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/favouriteFragment"
        android:name="com.echrisantus.buzz.ui.favourite.FavouriteFragment"
        android:label="@string/favourite"
        tools:layout="@layout/fragment_favourite">

        <action
            android:id="@+id/favouriteToHome"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="true"/>
        <action
            android:id="@+id/favouriteToDetail"
            app:destination="@id/favouriteDetailFragment"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.echrisantus.buzz.ui.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/searchToMovieDetails"
            app:destination="@id/movieDetailFragment"
            app:popUpToInclusive="true"/>
        <action
            android:id="@+id/searchToTVDetails"
            app:destination="@id/tvDetailFragment"
            app:popUpToInclusive="true"/>
        <action
            android:id="@+id/searchToHome"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="true"/>
        <argument
            android:name="timeWindow"
            app:argType="string"/>
        <argument
            android:name="mediaType"
            app:argType="string"/>
    </fragment>

    <fragment
        android:id="@+id/movieDetailFragment"
        android:name="com.echrisantus.buzz.ui.moviedetail.MovieDetailFragment"
        android:label="@string/movie_detail"
        tools:layout="@layout/fragment_movie_detail">
        <action
            android:id="@+id/movieDetailsToHome"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="true"/>
        <argument
            android:name="id"
            app:argType="integer"/>
    </fragment>

    <fragment
        android:id="@+id/tvDetailFragment"
        android:name="com.echrisantus.buzz.ui.tv.TVSeriesDetailFragment"
        android:label="@string/tv_detail"
        tools:layout="@layout/fragment_tvdetail_series">
        <action
            android:id="@+id/tvDetailsToTvMoreDetails"
            app:destination="@id/tvMoreDetailFragment"
            app:popUpToInclusive="true"/>
        <action
            android:id="@+id/tvDetailsToHome"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="true"/>
        <argument
            android:name="id"
            app:argType="integer"/>
    </fragment>

    <fragment
        android:id="@+id/tvMoreDetailFragment"
        android:name="com.echrisantus.buzz.ui.tv.TvSeriesMoreDetailsFragment"
        android:label="@string/tv_detail"
        tools:layout="@layout/fragment_tv_series_more_details">
        <action
            android:id="@+id/tvMoreDetailsToTvDetails"
            app:destination="@id/tvDetailFragment"
            app:popUpTo="@id/tvDetailFragment"
            app:popUpToInclusive="true"/>
        <argument
            android:name="id"
            app:argType="integer"/>
        <argument
            android:name="noOfSeasons"
            app:argType="integer"/>
    </fragment>

    <fragment
        android:id="@+id/favouriteDetailFragment"
        android:name="com.echrisantus.buzz.ui.favourite.FavouriteDetailFragment"
        android:label="@string/favourite"
        tools:layout="@layout/fragment_favourite_detail">

        <action
            android:id="@+id/favouriteDetailToTvMoreDetails"
            app:destination="@id/tvMoreDetailFragment"
            app:popUpToInclusive="true"/>

        <action
            android:id="@+id/favouriteDetailToFavourite"
            app:destination="@id/favouriteFragment"
            app:popUpToInclusive="true"/>
        <argument
            android:name="id"
            app:argType="integer"/>
        <argument
            android:name="mediaType"
            app:argType="string"/>
    </fragment>

    <action
        android:id="@+id/action_global_movieDetailFragment"
        app:destination="@id/movieDetailFragment"
        app:popUpToInclusive="true">

        <argument
            android:name="id"
            app:argType="integer"/>
    </action>
    <action
        android:id="@+id/action_global_tvDetailFragment"
        app:destination="@id/tvDetailFragment"
        app:popUpToInclusive="true" >

        <argument
            android:name="id"
            app:argType="integer"/>
    </action>

</navigation>